# isaac_ws

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: eval.yaml  export.yaml  smoke.yaml  train.yaml
configs/action/: franka_shadow_hand_delta_pos.yaml  joint_position.yaml  shadow_hand_delta_pos.yaml
configs/algo/: rsl_rl_ppo.yaml
configs/deploy/: ros2.yaml  ros2_shadow_grasp.yaml
configs/env/: palm_up_workspace.yaml  palm_up_workspace_debug.yaml  palm_up_workspace_scaleout.yaml  shadow_hand_palm_up.yaml  shadow_hand_palm_up_debug.yaml  shadow_hand_palm_up_scaleout.yaml  tabletop.yaml
configs/experiment/: dev.yaml  grasp_bootstrap.yaml  grasp_curriculum.yaml  shadow_hand_grasp_bootstrap.yaml
configs/obs/: grasp_proprio_contact.yaml  proprio.yaml  shadow_hand_grasp_proprio.yaml
configs/reward/: grasp_sphere_dense.yaml  reach_dense.yaml  shadow_hand_grasp_dense.yaml
configs/robot/: franka_fr3.yaml  franka_shadow_hand.yaml  shadow_hand.yaml
configs/runtime/: distributed_2gpu.yaml  distributed_4gpu.yaml  (+4 more)
docker/: Dockerfile  docker-compose.gui.yml  docker-compose.yml  entrypoint.sh  requirements.rl.txt  requirements.runtime.txt  requirements.torch.txt
docs/: architecture.md  asset_assembly.md  deployment.md  requirements.md  sim2real_risks.md
scripts/: check_config.sh  docker_build.sh  docker_clear_caches.sh  docker_common.sh  docker_down.sh  docker_exec.sh  docker_shell.sh  docker_shell_gui.sh  docker_up.sh  example_catalog.sh  generate_vscode_settings.sh  list_examples.sh  preflight_company.sh  prepare_x11.sh  run_eval.sh  run_export.sh  run_isaaclab_example.sh  run_isaacsim.sh  run_isaacsim_example.sh  run_isaacsim_gui.sh  run_task_smoke.sh  run_train.sh  verify_docker_stack.sh  verify_isaaclab_official.sh
tools/: check_config.py
(+37 files in other folders)
