[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isaac-ws"
version = "0.1.0"
description = "Docker-based Isaac Sim 5.1.0 / Isaac Lab project scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "hydra-core>=1.3,<2.0",
  "omegaconf>=2.3,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11",
]

[project.scripts]
isaac-ws-launch = "isaac_ws.launch:main"
isaac-ws-train = "isaac_ws.train:main"
isaac-ws-eval = "isaac_ws.eval:main"
isaac-ws-export = "isaac_ws.export:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
