[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hand-isaac"
version = "0.1.0"
description = "Training workspace for Shadow Hand grasp experiments in Isaac Sim and Isaac Lab."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "hydra-core>=1.3,<2.0",
  "omegaconf>=2.3,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11",
]

[project.scripts]
hand-isaac-launch = "isaac_ws.launch:main"
hand-isaac-train = "isaac_ws.train:main"
hand-isaac-eval = "isaac_ws.eval:main"
hand-isaac-export = "isaac_ws.export:main"
isaac-ws-launch = "isaac_ws.launch:main"
isaac-ws-train = "isaac_ws.train:main"
isaac-ws-eval = "isaac_ws.eval:main"
isaac-ws-export = "isaac_ws.export:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
